chore(events): fix date width on firefox

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
@@ -135,6 +135,7 @@
                 font-size: 1em;
                 text-align: left;
                 width: -webkit-fill-available;
+                width: -moz-available;
                 border: none;
                 border-radius: 3px;
                 font-family: inherit;
